--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-BrandKernel_v3.0"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -38,8 +38,8 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
-# CONFIG_IOSCHED_DEADLINE is not set
-# CONFIG_IOSCHED_CFQ is not set
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
@@ -78,6 +78,9 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -596,8 +599,8 @@ CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 CONFIG_F2FS_FS=y
-# CONFIG_F2FS_STAT_FS is not set
-# CONFIG_F2FS_FS_POSIX_ACL is not set
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_CIFS=y
@@ -650,3 +653,44 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
+
+#Color_Control_v2
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
+#IO_SCHEDULERS
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ZEN=y
+
+#Advanced TCP Congestions :-
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_HIGHSPEED=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+
+#Kexec HardBoot
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=n
+
+#Dynamic FSync
+CONFIG_DYNAMIC_FSYNC=y
+
+#Brand_Additions
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_ADRENO_IDLER=y
+CONFIG_QUICK_WAKEUP=y
+CONFIG_USB_NET_AX8817X=y
+CONFIG_NTFS_FS=y
+CONFIG_SUNRPC=y
+CONFIG_SUNRPC_GSS=y
+CONFIG_RPCSEC_GSS_KRB5=y
+CONFIG_GRACE_PERIOD=y
+CONFIG_LOCKD=y
+CONFIG_NFS_USE_LEGACY_DNS is not set
+CONFIG_NFS_USE_KERNEL_DNS=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_V2=y
+CONFIG_NFS_V3=y
