--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -684,6 +684,7 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_USB_NET_AX8817X=y
 CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 CONFIG_SUNRPC=y
 CONFIG_SUNRPC_GSS=y
 CONFIG_RPCSEC_GSS_KRB5=y
