--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-BrandKernel_v3.3"
+CONFIG_LOCALVERSION="-DragonXia_v3.5"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
