--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -1,6 +1,6 @@
 CONFIG_LOCALVERSION="-DragonXia_v3.6"
 CONFIG_LOCALVERSION_AUTO=n
-CONFIG_DEFAULT_HOSTNAME=""
+CONFIG_DEFAULT_HOSTNAME="Xia"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -85,6 +85,9 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
+CONFIG_CPU_FREQ_GOV_IRONACTIVE is not set
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
