cpufreq : Add Lazyplug - credits : Joe Maples(@frap129)

--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -694,6 +694,7 @@ CONFIG_ATAGS_PROC=n
 CONFIG_DYNAMIC_FSYNC=y
 
 #Brand_Additions
+CONFIG_ZEN_INTERACTIVE=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_QUICK_WAKEUP=y
@@ -714,3 +715,4 @@ CONFIG_NFS_V3=y
 #Hotplugs
 CONFIG_ZEN_DECISION=y
 CONFIG_BRICKED_HOTPLUG=y
+CONFIG_LAZYPLUG=y
