--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -88,6 +88,7 @@ CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
 CONFIG_CPU_FREQ_GOV_IRONACTIVE is not set
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
