--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -43,8 +43,13 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_DEFAULT_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_NOOP=y
+CONFIG_BLK_CGROUP=y
+CONFIG_CGROUP_WRITEBACK=y
+CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_BFQ_GROUP_IOSCHED=y
+CONFIG_SCSI_MQ_DEFAULT=n
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
