--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -703,6 +703,7 @@ CONFIG_DYNAMIC_FSYNC=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_ADRENO_BOOST=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_USB_NET_AX8817X=y
 CONFIG_NTFS_FS=y
