Enable USB Fastcharge

--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -700,6 +700,7 @@ CONFIG_ATAGS_PROC=n
 CONFIG_DYNAMIC_FSYNC=y
 
 #Brand_Additions
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_ADRENO_IDLER=y
