defconfig : make it DX

--- a/arch/arm64/configs/brand_gemini_defconfig
+++ b/arch/arm64/configs/brand_gemini_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-DragonXia_v3.7"
+CONFIG_LOCALVERSION="-DX"
 CONFIG_LOCALVERSION_AUTO=n
 CONFIG_DEFAULT_HOSTNAME="Xia"
 CONFIG_SYSVIPC=y
